syntax = "proto3";

package api;

service ImageProcessor {
    rpc GetPaths(UploadStatus) returns (NewImagePath) {}
    rpc Upload(stream Chunk) returns (stream FileStream) {}
    rpc SendFileName(FileName) returns (FileName) {}
}

message NewImagePath {
    string oldPath = 1;
    string newPath = 2;
}

message Chunk {
    bytes Content = 1;
    string FileName = 2;
}

message FileStream {
    bytes Content = 1;
    string FileName = 2;
}

message FileName {
    string name = 1;
}

message UploadStatus {
    string Message = 1;
}